--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,10 @@
         "sizes": "48x48"
       }
     ],
-    "start_url": "/",
+    "start_url": "./",
     "display": "standalone",
     "description":"Flappy Bird in Phaser 3",
     "theme_color": "#ffffff",
     "background_color": "#ffffff",
-    "scope": "/"
+    "scope": "./"
   }
